--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "publisher": "yuns",
   "name": "links",
   "displayName": "Links",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@8.10.5",
   "description": "",
@@ -43,7 +43,10 @@
           "uniqueItems": true,
           "items": {
             "type": "object",
-            "required": ["url", "title"],
+            "required": [
+              "url",
+              "title"
+            ],
             "properties": {
               "url": {
                 "type": "string",
