--- a/package.json
+++ b/package.json
@@ -85,6 +85,9 @@
     "prepare": "husky install",
     "lint:fix": "eslint --fix ."
   },
+  "dependencies": {
+    "git-remote-origin-url": "^4.0.0"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^2.13.3",
     "@antfu/ni": "^0.21.9",
