--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName": "Links",
   "version": "0.0.6",
   "private": true,
-  "packageManager": "pnpm@8.10.5",
+  "packageManager": "pnpm@9.7.1",
   "description": "Pursue better UX for project links",
   "author": "Yuns <yuns.xie@qq.com>",
   "license": "MIT",
@@ -29,7 +29,7 @@
     "dist"
   ],
   "engines": {
-    "vscode": "^1.84.1"
+    "vscode": "^1.92.0"
   },
   "activationEvents": [
     "onStartupFinished"
@@ -75,47 +75,44 @@
   "scripts": {
     "build": "tsup src/index.ts --external vscode",
     "dev": "nr build --watch",
-    "lint": "eslint .",
+    "lint": "eslint --flag unstable_ts_config .",
     "vscode:prepublish": "nr build",
     "publish": "vsce publish --no-dependencies",
     "pack": "vsce package --no-dependencies",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
     "release": "bumpp && nr publish",
-    "prepare": "husky install",
-    "lint:fix": "eslint --fix ."
+    "prepare": "husky install & nr update",
+    "update": "vscode-ext-gen --output src/generated/meta.ts",
+    "lint:fix": "eslint --flag unstable_ts_config --fix ."
   },
   "dependencies": {
-    "git-remote-origin-url": "^4.0.0"
+    "git-remote-origin-url": "^4.0.0",
+    "reactive-vscode": "^0.2.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.13.3",
-    "@antfu/ni": "^0.21.9",
-    "@commitlint/cli": "^19.2.1",
-    "@commitlint/config-conventional": "^19.1.0",
-    "@commitlint/types": "^19.0.3",
-    "@jannajs/lint": "3.0.0-next.6",
-    "@types/node": "^20.9.0",
-    "@types/vscode": "^1.84.1",
-    "@vscode/vsce": "^2.26.0",
-    "bumpp": "^9.4.0",
-    "eslint": "npm:eslint-ts-patch@8.57.0-0",
-    "eslint-plugin-format": "^0.1.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "eslint-ts-patch": "^8.57.0-0",
-    "esno": "^4.0.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "pnpm": "^8.10.5",
+    "@eslint-react/eslint-plugin": "^1.9.1",
+    "@jannajs/lint": "3.0.0-next.16",
+    "@types/node": "^22.2.0",
+    "@types/vscode": "^1.92.0",
+    "@vscode/vsce": "^2.32.0",
+    "bumpp": "^9.5.1",
+    "eslint": "9.9.0",
+    "eslint-plugin-format": "^0.1.2",
+    "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.9",
+    "pnpm": "^9.7.1",
     "rimraf": "^5.0.5",
-    "tsup": "^7.2.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vitest": "^1.6.0"
+    "tsup": "^8.2.4",
+    "tsx": "^4.17.0",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.1",
+    "vitest": "^2.0.5",
+    "vscode-ext-gen": "^0.3.6"
   },
   "lint-staged": {
-    "*": "eslint --fix"
+    "*": "eslint --flag unstable_ts_config --fix"
   }
 }
