--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName": "Links",
   "version": "0.0.11",
   "private": true,
-  "packageManager": "pnpm@9.7.1",
+  "packageManager": "pnpm@10.11.0",
   "description": "Pursue better UX for project links",
   "author": "Yuns <yuns.xie@qq.com>",
   "license": "MIT",
@@ -41,6 +41,7 @@
       "title": "Links",
       "properties": {
         "links.resources": {
+          "description": "Resources to open",
           "type": "array",
           "uniqueItems": true,
           "items": {
@@ -77,44 +78,49 @@
   "scripts": {
     "build": "tsup src/index.ts --external vscode",
     "dev": "nr build --watch",
-    "lint": "eslint --flag unstable_ts_config .",
+    "lint": "eslint .",
     "vscode:prepublish": "nr build",
     "publish": "vsce publish --no-dependencies",
     "pack": "vsce package --no-dependencies",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
     "release": "bumpp && nr publish",
-    "prepare": "husky install & nr update",
+    "prepare": "husky & nr update",
     "update": "vscode-ext-gen --output src/generated/meta.ts",
-    "lint:fix": "eslint --flag unstable_ts_config --fix ."
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "git-remote-origin-url": "^4.0.0",
-    "reactive-vscode": "^0.2.0"
+    "reactive-vscode": "^0.2.17"
   },
   "devDependencies": {
-    "@eslint-react/eslint-plugin": "^1.9.1",
-    "@jannajs/lint": "3.0.0-next.16",
-    "@types/node": "^22.2.0",
-    "@types/vscode": "^1.92.0",
-    "@vscode/vsce": "^2.32.0",
-    "bumpp": "^9.5.1",
-    "eslint": "9.9.0",
+    "@antfu/eslint-config": "^3.16.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/types": "^19.8.1",
+    "@eslint-react/eslint-plugin": "^1.49.0",
+    "@jannajs/lint": "^3.1.1",
+    "@prettier/plugin-xml": "^3.4.1",
+    "@types/node": "^22.15.18",
+    "@types/vscode": "^1.100.0",
+    "@vscode/vsce": "^3.4.0",
+    "bumpp": "^10.1.1",
+    "eslint": "9.27.0",
     "eslint-plugin-format": "^0.1.2",
-    "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "husky": "^9.1.4",
-    "lint-staged": "^15.2.9",
-    "pnpm": "^9.7.1",
-    "rimraf": "^5.0.5",
-    "tsup": "^8.2.4",
-    "tsx": "^4.17.0",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.1",
-    "vitest": "^2.0.5",
-    "vscode-ext-gen": "^0.3.6"
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
+    "pnpm": "^10.11.0",
+    "rimraf": "^6.0.1",
+    "tsup": "^8.5.0",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vitest": "^3.1.3",
+    "vscode-ext-gen": "^1.0.2"
   },
   "lint-staged": {
-    "*": "eslint --flag unstable_ts_config --fix"
+    "*": "eslint --fix"
   }
 }
