--- a/package.json
+++ b/package.json
@@ -90,8 +90,8 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
-    "git-remote-origin-url": "^4.0.0",
-    "reactive-vscode": "^0.2.17"
+    "reactive-vscode": "^0.2.17",
+    "simple-git": "^3.28.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.16.0",
