--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "tsx": "^4.19.4",
+    "type-fest": "^4.41.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vitest": "^3.1.3",
