📦 refactor: entrypoints and constants renaming

--- a/package.json
+++ b/package.json
@@ -202,7 +202,8 @@
     "vscode:prepublish": "nr build",
     "publish": "vsce publish --no-dependencies",
     "pack": "vsce package --no-dependencies",
-    "test": "vitest",
+    "test": "vitest --run",
+    "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
     "release": "bumpp && nr publish",
     "prepare": "husky & nr update",
