♻️ chore: update links tree view title

--- a/package.json
+++ b/package.json
@@ -162,7 +162,7 @@
       "explorer": [
         {
           "id": "linksTree",
-          "name": "Project Links",
+          "name": "Links",
           "contextualTitle": "Links",
           "icon": "res/icon.svg"
         }
