--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "res/*"
   ],
   "engines": {
-    "vscode": "^1.92.0"
+    "vscode": "^1.100.0"
   },
   "activationEvents": [
     "onStartupFinished"
@@ -196,8 +196,8 @@
     }
   },
   "scripts": {
-    "build": "tsup src/index.ts --external vscode",
-    "dev": "nr build --watch",
+    "build": "tsdown src/index.ts --external vscode",
+    "dev": "nr build --watch --sourcemap",
     "lint": "eslint .",
     "vscode:prepublish": "nr build",
     "publish": "vsce publish --no-dependencies",
@@ -214,9 +214,8 @@
     "axios": "^1.11.0",
     "es-toolkit": "^1.39.10",
     "papaparse": "^5.5.3",
-    "reactive-vscode": "^0.2.17",
-    "simple-git": "^3.28.0",
-    "zod": "^4.1.0"
+    "reactive-vscode": "^0.3.2",
+    "simple-git": "^3.28.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.16.0",
@@ -228,7 +227,7 @@
     "@prettier/plugin-xml": "^3.4.1",
     "@types/node": "^22.15.18",
     "@types/papaparse": "^5.3.16",
-    "@types/vscode": "^1.92.0",
+    "@types/vscode": "^1.100.0",
     "@vscode/vsce": "^3.4.0",
     "bumpp": "^10.1.1",
     "eslint": "9.27.0",
@@ -239,7 +238,7 @@
     "lint-staged": "^15.5.2",
     "pnpm": "^10.11.0",
     "rimraf": "^6.0.1",
-    "tsup": "^8.5.0",
+    "tsdown": "^0.14.2",
     "tsx": "^4.19.4",
     "type-fest": "^4.41.0",
     "typescript": "^5.8.3",
