--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,25 +1,44 @@
-name: Release
-
-permissions:
-  contents: write
+name: Publish Extension
 
 on:
   push:
     tags:
-      - 'v*'
+      - v*
 
 jobs:
-  release:
+  publish-extension:
+    permissions:
+      id-token: write
+      contents: write
+      actions: write
+
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-node@v3
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Set node
+        uses: actions/setup-node@v4
         with:
           node-version: lts/*
+          cache: pnpm
 
       - run: npx changelogithub
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+      - run: pnpm install
+
+      - name: Generate .vsix file
+        run: pnpm ext:package
+
+      - name: Publish Extension
+        run: pnpm ext:publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VSCE_PAT: ${{secrets.VSCE_PAT}}
