--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "publisher": "yuns",
   "name": "links",
   "displayName": "Links",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "private": true,
   "packageManager": "pnpm@10.11.0",
   "description": "Pursue better UX for project links",
@@ -31,7 +31,7 @@
     "res/*"
   ],
   "engines": {
-    "vscode": "^1.100.0"
+    "vscode": "^1.101.0"
   },
   "activationEvents": [
     "onStartupFinished"
@@ -200,22 +200,15 @@
     "dev": "nr build --watch --sourcemap",
     "lint": "eslint .",
     "vscode:prepublish": "nr build",
-    "publish": "vsce publish --no-dependencies",
-    "pack": "vsce package --no-dependencies",
+    "ext:package": "vsce package --no-dependencies",
+    "ext:publish": "vsxpub --no-dependencies",
     "test": "vitest --run",
     "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
-    "release": "bumpp && nr publish",
+    "release": "bumpp",
     "prepare": "husky & nr update",
     "update": "vscode-ext-gen --output src/generated/meta.ts",
     "lint:fix": "eslint --fix ."
-  },
-  "dependencies": {
-    "axios": "^1.11.0",
-    "es-toolkit": "^1.39.10",
-    "papaparse": "^5.5.3",
-    "reactive-vscode": "^0.3.2",
-    "simple-git": "^3.28.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.16.0",
@@ -227,24 +220,31 @@
     "@prettier/plugin-xml": "^3.4.1",
     "@types/node": "^22.15.18",
     "@types/papaparse": "^5.3.16",
-    "@types/vscode": "^1.100.0",
+    "@types/vscode": "^1.101.0",
     "@vscode/vsce": "^3.4.0",
+    "axios": "^1.11.0",
     "bumpp": "^10.1.1",
+    "es-toolkit": "^1.39.10",
     "eslint": "9.27.0",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
+    "ovsx": "^0.10.5",
+    "papaparse": "^5.5.3",
     "pnpm": "^10.11.0",
+    "reactive-vscode": "^0.3.2",
     "rimraf": "^6.0.1",
+    "simple-git": "^3.28.0",
     "tsdown": "^0.14.2",
     "tsx": "^4.19.4",
     "type-fest": "^4.41.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vitest": "^3.1.3",
-    "vscode-ext-gen": "^1.1.0"
+    "vscode-ext-gen": "^1.1.0",
+    "vsxpub": "^0.1.1"
   },
   "lint-staged": {
     "*": "eslint --fix"
