--- a/package.json
+++ b/package.json
@@ -200,8 +200,8 @@
     "dev": "nr build --watch --sourcemap",
     "lint": "eslint .",
     "vscode:prepublish": "nr build",
-    "ext:package": "vsce package --no-dependencies",
-    "ext:publish": "vsxpub --no-dependencies",
+    "package": "vsce package --no-dependencies",
+    "publish": "vsce publish --no-dependencies",
     "test": "vitest --run",
     "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
@@ -243,8 +243,7 @@
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vitest": "^3.1.3",
-    "vscode-ext-gen": "^1.1.0",
-    "vsxpub": "^0.1.1"
+    "vscode-ext-gen": "^1.1.0"
   },
   "lint-staged": {
     "*": "eslint --fix"
