🐛 fix: publish with typecheck:preview

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
         run: nci
 
       - name: Typecheck
-        run: nr typecheck
+        run: nr typecheck:preview
 
   test:
     runs-on: ${{ matrix.os }}
