--- a/package.json
+++ b/package.json
@@ -223,6 +223,7 @@
     "test": "vitest --run",
     "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
+    "typecheck:preview": "tsgo --noEmit",
     "release": "bumpp",
     "prepare": "husky & nr update",
     "update": "vscode-ext-gen --output src/generated/meta.ts",
@@ -239,6 +240,7 @@
     "@types/node": "^22.15.18",
     "@types/papaparse": "^5.3.16",
     "@types/vscode": "^1.101.0",
+    "@typescript/native-preview": "7.0.0-dev.20250910.1",
     "@vscode/vsce": "^3.4.0",
     "axios": "^1.11.0",
     "bumpp": "^10.1.1",
